[tool.poetry]
name = "spaceship-titanic"
version = "0.1.0"
description = ""
authors = ["João Braz Simões <joaosbraz@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
torch = [
    {url = "https://download.pytorch.org/whl/cpu/torch-1.11.0-cp39-none-macosx_10_9_x86_64.whl", markers = "sys_platform == 'darwin'"},
    {url = "https://download.pytorch.org/whl/cu113/torch-1.11.0%2Bcu113-cp39-cp39-linux_x86_64.whl", markers = "sys_platform == 'linux'"}
]
numpy = "^1.22"
matplotlib = "^3.5"
jupyter = "^1.0.0"
pandas = "^1.4.2"
scikit-learn = "^1.1.0"
xgboost = "^1.6.1"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
